# zooniverseDB

./: .gitignore  main.py  pyproject.toml  schema.py
tests/: test_zooniversedb.py
zooniverseDB/: config.yml  pyproject.toml
zooniverseDB/zooniversedb/: .gitignore  main.py  schema.py
