[tool.poetry]
name = "zooniverseDB"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
maestro = {git = "ssh://git@github.com/chimefrb/maestro.git", rev = "main", extras = ["mongodb", "prometheus"]}
numpy = "^1.20.3"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
